@@ -1,4 +1,4 @@
-$NetBSD: distinfo,v 1.2 2004/02/10 04:45:44 minskim Exp $
+$NetBSD: distinfo,v 1.3 2004/02/12 15:17:08 minskim Exp $
 
-SHA1 (teixsl-fo-3.1/teixsl-fo.zip) = 8afce8e046d91192d6840906e55c7ef14187614c
-Size (teixsl-fo-3.1/teixsl-fo.zip) = 49791 bytes
+SHA1 (teixsl-fo-3.1nb1/teixsl-fo.zip) = bbef5eb73f76fd82cdef02aa4aca9079d7a38bc4
+Size (teixsl-fo-3.1nb1/teixsl-fo.zip) = 49781 bytes
