@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.5282 2004/03/20 16:25:16 xtraeme Exp $
+$NetBSD: CHANGES,v 1.5283 2004/03/20 19:31:47 minskim Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -1498,3 +1498,5 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated abiword to 2.0.4nb3 [xtraeme 2004-03-20]
 	Updated tcl-tclX to 8.2.0nb1 [minskim 2004-03-20]
 	Updated tk-tclX to 8.2.0nb1 [minskim 2004-03-20]
+	Updated teixsl-html to 3.1nb1 [minskim 2004-03-20]
+	Updated teixsl-fo to 3.1nb1 [minskim 2004-03-20]
